k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: play2-bot
  labels:
    app.kubernetes.io/name: play2-bot
    app.kubernetes.io/instance: play2-bot
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: play2-bot
      app.kubernetes.io/instance: play2-bot
  template:
    metadata:
      labels:
        app.kubernetes.io/name: play2-bot
        app.kubernetes.io/instance: play2-bot
    spec:
      # affinity:
      #   nodeAffinity:
      #     requiredDuringSchedulingIgnoredDuringExecution:
      #       nodeSelectorTerms:
      #       - matchExpressions:
      #         - key: node.kubernetes.io/instance-type
      #           operator: In
      #           values:
      #           - vhp-2c-2gb-amd  
      imagePullSecrets:
        - name: dockersecret      
      serviceAccountName: play2-bot
      securityContext:
        {}
      containers:
        - name: app
          securityContext:
            {}
          image: "whthduck/play2-bot:latest"
          imagePullPolicy: Always
          ports:
          - containerPort: 8080
            name: http
            protocol: TCP  
          readinessProbe:
            failureThreshold: 10
            httpGet:
              path: /
              port: http
            periodSeconds: 10        
          resources:
            limits:
              cpu: 100m
              memory: 256Mi
            requests:
              cpu: 100m
              memory: 256Mi
