k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: play2-bot
  labels:
    app.kubernetes.io/name: play2-bot
    app.kubernetes.io/instance: play2-bot
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: play2-bot
    app.kubernetes.io/instance: play2-bot
