k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: play2-bot
  labels:
    app.kubernetes.io/name: play2-bot
    app.kubernetes.io/instance: play2-bot
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    external-dns.alpha.kubernetes.io/ttl: 5m
    kubernetes.io/ingress.class: nginx
